--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <style>
 body {
-  /*background-image: url("https://webdesignerdepot.s3.amazonaws.com/default-images/26.jpg");*/
   background-image: url("https://images.unsplash.com/photo-1545693315-85b6be26a3d6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /*background-size: 2400px 800px;*/
   background-size: 1300px 850px;
 }
 
@@ -62,17 +60,15 @@ hr {
 
   <form>
     <label>Enter a name to calculate gender</label>
-    <input id="weatherInput" type="text"></input><br/>
-    <input id="weatherSubmit" type="submit" value="Submit"></input>
+    <input id="nameInput" type="text"></input><br/>
+    <input id="nameSubmit" type="submit" value="Submit"></input>
   </form>
-  <div id="weatherResults">
+  <div id="nameResults">
   </div>
   
   <hr>
   
-  <!--<h2>Forecast Every Three Hours for the Next Five Days</h2>-->
-  
-  <div id="forecastResults">
+  <div id="footnotes">
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
