--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@ div {
 hr {
   color: black;
 }
+
+footer {
+  /*padding: 10px 20px;*/
+  color: white;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 </style>
 
 <body>
@@ -74,6 +83,8 @@ hr {
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   <script text="type/javascript" src="script.js">
   </script>
+  
+  <footer><a href="https://github.com/larsonbc/BYUCS260CreativeProject2.git" style="color: white">GitHub</a></footer>
 
 </body>
 
